@@ -189,7 +189,8 @@
     /sbin/blkid
   </mode>
 
-  /usr/bin/mutter
+  /usr/bin/drakx-matchbox-window-manager
+  /usr/share/matchbox/mbnoapp.xpm
 
   /usr/share/icons/gnome/scalable/status/dialog-warning-symbolic.svg
 
@@ -245,6 +246,10 @@
   </if>
 
   <from expand="glob">
+    <!-- needed by matchbox -->
+    <from spaces_in_filename="1">
+       /usr/share/themes/Ia Ora*/matchbox/*
+    </from>
     /usr/share/themes/oxygen-gtk*
     /usr/LIB/gdk-pixbuf-2.0/*/loaders.cache
     /usr/LIB/gdk-pixbuf-2.0/*/loaders/libpixbufloader-png.so
