@@ -1,5 +1,8 @@
 - partitioning:
   o do not propose check bad blocks for btrfs (Manuel Hiebel, mga#10116)
+- revert back to matchbox instead of mutter as it doesn't fix
+  diskdrake issues (mga#11977)
+  (thus fixing missing window decorations (mga#12218))
 
 Version 16.17 - 20 December 2013
 
